--- a/www/offline.html
+++ b/www/offline.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            布丁布丁吃什麼？
+            馬克做什麼？
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
 <span class="blog-copyright">
                 © Copyright 2016 
                 <a href="http://blog.pulipuli.info/">
-                    布丁布丁吃什麼？
+                    馬克做什麼？
                 </a>
 </span>
 </p>
