--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Configuration Start: Please customize following configuration -->
-        <title>布丁布丁吃什麼？</title>
+        <title>馬克做什麼？</title>
         <!-- Configuration End -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
