--- a/www/index.html
+++ b/www/index.html
@@ -1,56 +1,43 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-    <head>
-        <!-- Configuration Start: Please customize following configuration -->
-        <title>馬克做什麼？</title>
-        <!-- Configuration End -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='style.css' rel='stylesheet' type='text/css'/>
-        <script type="text/javascript" src="cordova.js"></script>
-    </head>
-    <body>
-        <div id="content">
-            <div class="content-container">
-                <img src="spin.svg" />
-                <div>
-                    <!-- Configuration Start: Please customize following configuration -->
-                    <h1>馬克做什麼？</h1>
-                    <div class="description"><span>我不是在山上<br />就是在前往山上的路上</span></div>
-                    <!-- Configuration End -->
-                </div>
+<head>
+    <title>馬克APP</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!--<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
+    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>-->
+    <!--<script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>-->
+    <!--<script src="https://cdn.bootcss.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>-->
+    <script src="scripts/bootstrap.min.js"></script>
+</head>
+<body>
+
+    <div class="jumbotron text-center">
+        <h1>馬克逐漸長大的APP</h1>
+        <p>台灣百岳、小百岳、大台北郊山百岳、百名山...還有很多</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>百岳</h3>
+                <p>開始製作</p>
+                <p><a class="btn btn-default" href="mark/index.html">更多 &raquo;</a></p>
+            </div>
+            <div class="col-sm-4">
+                <h3>馬克線上網站</h3>
+                <p><a class="btn btn-default" href="index2.html">更多 &raquo;</a></p>
+            </div>
+            <div class="col-sm-4">
+                <h3>大台北郊山百岳</h3>
+                <p>待製</p>
+                <p>待製</p>
             </div>
         </div>
-        <div class="footer" id="footer">
-<div class="container clearfix">
-<p>
-<span class="blog-copyright">
-    <!-- Configuration Start: Please customize following configuration -->
-    © Copyright 2017 <a href="http://www.markchoo.com.tw/">馬克做什麼？</a>
-    <!-- Configuration End -->
-</span>
-</p>
-</div>
-</div>
-        <script type="text/javascript">
-                // device APIs are available
-                function onDeviceReady() {
-                    if (history.length > 1) {
-                        navigator.app.exitApp();
-                        return;
-                    }
-                    
-                    //alert(navigator.network.connection.type);
-                    if (navigator.network.connection.type === Connection.NONE) {
-                        //location.replace("offline.html");
-                        location.href = "offline.html";
-                    } else {
-                        // <!-- Configuration Start: Please customize following configuration -->
-                        location.replace("http://www.markchoo.com.tw/");
-                        // <!-- Configuration End -->
-                    }
-                }
-                document.addEventListener("deviceready", onDeviceReady, false);
-        </script>
-    </body>
+    </div>
+
+</body>
 </html>
