--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-sm-4">
                 <h3>馬克線上網站</h3>
-                <p><a class="btn btn-default" href="index2.html">更多 &raquo;</a></p>
+                <p><a class="btn btn-default" href="http://www.markchoo.com.tw">更多 &raquo;</a></p>
             </div>
             <div class="col-sm-4">
                 <h3>大台北郊山百岳</h3>
