--- a/www/mark/index.html
+++ b/www/mark/index.html
@@ -34,6 +34,7 @@
         <h1>能高安東軍相關圖檔</h1>
         <p><a class="btn btn-default" href="http://www.markchoo.com.tw/mark/3076">［能高安東軍］線上資料 &raquo;</a></p>
         <div>
+            <img src='graph/27/1060920191-b.jpg' style='border: 1px solid #0000FF;' class='img-responsive'><p />
             <img src='graph/27/p-03076-a.gif' style='border: 1px solid #0000FF;' class='img-responsive'><p />
             <img src='graph/27/t-03076.gif' style='border: 1px solid #0000FF;' class='img-responsive'><p />
             <img src='graph/27/t-03076-1.gif' style='border: 1px solid #0000FF;' class='img-responsive'><p />
