--- a/www/index.html
+++ b/www/index.html
@@ -14,30 +14,31 @@
     <script src="scripts/bootstrap.min.js"></script>
 </head>
 <body>
-
-    <div class="jumbotron text-center">
-        <h1>馬克逐漸長大的APP</h1>
-        <p>台灣百岳、小百岳、大台北郊山百岳、百名山...還有很多</p>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>百岳</h3>
-                <p>開始製作</p>
-                <p><a class="btn btn-default" href="mark/index.html">更多 &raquo;</a></p>
+ 
+    <main role="main">
+        <div class="container">
+            <div class="jumbotron">
+                <h1>馬克褚工作室的APP</h1>
+                <h3>提供離線和線上的資料查詢，讓你馳騁山林無後顧之憂！</h3>
             </div>
-            <div class="col-sm-4">
-                <h3>馬克線上網站</h3>
-                <p><a class="btn btn-default" href="http://www.markchoo.com.tw">更多 &raquo;</a></p>
-            </div>
-            <div class="col-sm-4">
-                <h3>大台北郊山百岳</h3>
-                <p>待製</p>
-                <p>待製</p>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h3>馬克離線APP</h3>
+                    <p>可離線查詢資料，持續製作中。資料來源是下載於手機內的xml檔。資料需不定時更新。</p>
+                    <p><a class="btn btn-primary btn-lg" href="program/m-app-main.html">更多 &raquo;</a></p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>馬克線上網站</h3>
+                    <p>可於有網路訊號時查詢馬克褚工作室網站<br />http://www.markchoo.com.tw</p>
+                    <p><a class="btn btn-primary btn-lg" href="http://www.markchoo.com.tw">更多 &raquo;</a></p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>關於馬克褚</h3>
+                    <p>本APP相關描述</p>
+                    <p><a href="program\m-app-about.html" class="btn btn-primary btn-lg" target="_self">更多 &raquo;</a></p>
+                </div>
             </div>
         </div>
-    </div>
-
+    </main>
 </body>
 </html>
